# basic-websocket-cpp

./: CMakeLists.txt  Readme.md  conanfile.txt
proto/: email_verifier.proto  emailverifier.proto
src/: client.cpp  server.cpp
src/adapters/websocket_server/: websocket_server.cpp  websocket_server.hpp
src/app/: server_main.cpp
src/client/: email_verifier_client.cpp  email_verifier_client.hpp  main.cpp
src/common/: email_utils.hpp
src/controllers/: grpc_service.cpp  grpc_service.hpp
src/globals/: constants.hpp  email_storage.cpp  email_storage.hpp
src/handlers/: email_handler.cpp  email_handler.hpp
src/server/: grpc_service.cpp  grpc_service.hpp  main.cpp  websocket_server.cpp
src/threads/: grpc_websocket_threads.cpp  grpc_websocket_threads.hpp
src/utils/: email_utils.cpp  json_utils.cpp  json_utils.hpp
